    (Gabor Liptak via aajisaka)

    MAPREDUCE-6557. Tests in mapreduce-client-app are writing outside of
    target. (Akira AJISAKA via junping_du)

    MAPREDUCE-6549. multibyte delimiters with LineRecordReader cause
    duplicate records (wilfreds via rkanter)

    MAPREDUCE-6550. archive-logs tool changes log ownership to the Yarn
    user when using DefaultContainerExecutor (rkanter)

   MAPREDUCE-6419. JobHistoryServer doesn't sort properly based on Job ID when Job id's 
   exceed 9999. (Mohammad Shahid Khan via rohithsharmaks)

    MAPREDUCE-6589. TestTaskLog outputs a log under directory other than
    target/test-dir. (aajisaka)

    MAPREDUCE-6593. TestJobHistoryEventHandler.testTimelineEventHandling fails
    on trunk because of NPE. (Naganarasimha G R via aajisaka)

Release 2.7.3 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    MAPREDUCE-6377. JHS sorting on state column not working in webUi.
    (zhihai xu via devaraj)

    MAPREDUCE-5883. "Total megabyte-seconds" in job counters is slightly
    misleading (Nathan Roberts via jlowe)

    MAPREDUCE-6549. multibyte delimiters with LineRecordReader cause
    duplicate records (wilfreds via rkanter)

    MAPREDUCE-6583. Clarify confusing sentence in MapReduce tutorial document.
    (Kai Sasaki via aajisaka)

Release 2.7.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    MAPREDUCE-6425. ShuffleHandler passes wrong "base" parameter to getMapOutputInfo
    if mapId is not in the cache. (zhihai xu via devaraj)

    MAPREDUCE-6426. TestShuffleHandler#testGetMapOutputInfo is failing.
    (zhihai xu via devaraj)

    MAPREDUCE-6439. AM may fail instead of retrying if RM shuts down during the
    allocate call. (Anubhav Dhoot via kasha)

    MAPREDUCE-6442. Stack trace is missing when error occurs in client protocol
    provider's constructor (Chang Li via ozawa)
