@@ -3008,9 +3008,16 @@ name|mergeProgress
 operator|.
 name|set
 argument_list|(
+name|Math
+operator|.
+name|min
+argument_list|(
+literal|1.0f
+argument_list|,
 name|totalBytesProcessed
 operator|*
 name|progPerByte
+argument_list|)
 argument_list|)
 expr_stmt|;
 if|if
@@ -3220,9 +3227,16 @@ name|mergeProgress
 operator|.
 name|set
 argument_list|(
+name|Math
+operator|.
+name|min
+argument_list|(
+literal|1.0f
+argument_list|,
 name|totalBytesProcessed
 operator|*
 name|progPerByte
+argument_list|)
 argument_list|)
 expr_stmt|;
 return|return
@@ -3843,9 +3857,16 @@ name|mergeProgress
 operator|.
 name|set
 argument_list|(
+name|Math
+operator|.
+name|min
+argument_list|(
+literal|1.0f
+argument_list|,
 name|totalBytesProcessed
 operator|*
 name|progPerByte
+argument_list|)
 argument_list|)
 expr_stmt|;
 else|else
